# pyAPisolation

./: .gitattributes  .gitignore  AGENTS.md  ANALYSIS_REFACTOR.md  ANALYSIS_WIZARD_README.md  COPILOT_PRIORITIES.md  LICENSE  MODULAR_ANALYSIS_README.md  PERFORMANCE_OPTIMIZATION.md  README.md  SPREADSHEET_ENHANCEMENT.md  WEBVIZ_CHANGES.md  add_custom_analysis_example.py  create_test_data.py  demo_modular_analysis.py  environment.yml  index.html  out.prfx  pyABF-APisolation.sln  pyisolation_VS.sln  pyproject.toml  requirements.txt  run_APisolation_ipfx.spec  setup.py  setup_wizard.py  test.pzfx  test_database_view_state.py  test_registration_utilities.py
.github/: copilot-instructions.md
.github/instructions/: analysis-framework.instructions.md  gui-migration.instructions.md
.github/workflows/: python-package-conda.yml  python-package.yml
examples/: usage_examples.py
gigaseal/: __init__.py  cli.py  dataset.py  patch_VC_analysis.py  patch_ml.py  utils.py
gigaseal/analysis/: __init__.py  base.py  registry.py  result.py
gigaseal/database/: __init__.py  _legacy_tsDatabase.py  build_database.py  tsDatabase.py
gigaseal/dev/: epsp_analysis.py  grow.py  miniPSC_subsample_concat.py  prism_template2.pzfx  prism_writer_gui.py  run_GROW_SPCA.py  test_feature_change.spec
gigaseal/gui/: __init__.py  app.py  database_builder.py  example_custom_analysis.py  postAnalysisRunner.py  spikeFinder.py  wizard_integration.py
gigaseal/loadFile/: loadNWB.py
gigaseal/webViz/: dummy_tr.html  ephysDatabaseViewer.py  flaskApp.py  index.html  run_web_viz.py  test.html  webviz_config.yaml  webviz_config_generator.py
notebooks/: epsp_analysis.ipynb  epsp_analysis_indepth.ipynb  functional_analysis.html  functional_analysis.ipynb
pyABF-APisolation/: abfderivative.py  nuactionpotential.py  nwb2  nwb_pyABF_APisolation.py  pyABF-APisolation - Code Walkthrough.ipynb  pyABF-APisolation.pyproj  pyABF_APisolation.py  pyABF_APisolation_NHP.py  test.csv
pyABF-APisolation/.ipynb_checkpoints/: pyABF-APisolation - Code Walkthrough-checkpoint.ipynb
pyABF-APisolation/Processed/: 17829001-m.abf  18804014-p.abf  18809002-p.abf  18809012-p.abf  18809021-p.abf  18809028-p.abf  1909016-p.abf  191002009-p.abf  19123015-p.abf  19124000-m.abf  19207022-m.abf  19207046-m.abf  19228050-p.abf  19703005-m.abf  19709021-p.abf  1971003-p.abf  19919026-p.abf  19919061-m.abf  19919063-m.abf  19922008-m.abf  19922018-m.abf  19923001-m.abf  19o02008-p.abf  19o02014-m.abf  19o02020-p.abf  19o02031-m.abf  19o02034-p.abf
pyABF-APisolation/Test/: 19930004 - 05.abf  19930009 - 08.abf  19930016 - 17.abf
pyABF-APisolation/lib/: pyABF
pyAPisolation/: QC.py  __init__.py  abf_chirp.py  abf_dataset.py  abf_featureextractor.py  abf_ipfx_dataframes.py  abf_utils.py  abfanalysis.ipynb  abfanalysis_local.ipynb  cli.py  dataset.py  featureExtractor.py  feature_extractor.py  featureextractor.py  ipfx_df.py  loadABF.py  loadNWB.py  module1.py  nuactionpotential.py  nwbactionpotential.py  patch_VC_analysis.py  patch_ml.py  patch_subthres.py  patch_utils.py  pyABF_APisolation.py  pyAPisolation.pyproj  setup_install.py  subthres.py  test.json  utils.py
pyAPisolation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyAPisolation/.ipynb_checkpoints/: abf_featureextractor-checkpoint.py  abf_ipfx_dataframes-checkpoint.py  abfanalysis_local-checkpoint.ipynb
pyAPisolation/Processed/: 17829000-p.abf  18804000-p.abf  18808001-m.abf  18808013-p.abf  18808020-p.abf  18809000-p.abf  (+28 more)
tests/: test_analysis_framework.py  test_analysis_wizard.py  test_cli.py  test_dataframe_import.py  test_datasets.py  test_feature_change.py  test_feature_extractor.py  test_gui_imports.py  test_gui_smoke.py  test_install.py  test_parameter.py  test_parameters.py  test_prism_writer.py  test_syntax.py  test_tsDatabase.py  test_webviz.py
(+179 files in other folders)
